# dartboard-detection

./: .gitignore  README.md  training_results.xlsx
ipcv_assignment_1/: CMakeLists.txt  LICENSE  calculations.cpp  face.cpp  hough.cpp  load_darts.cpp  load_faces.cpp  main.cpp  pixels  plot_tpr_fpr.py  train_results.csv  util.cpp
ipcv_assignment_1/header/: calculations.h  hough.h  load_darts.h  load_faces.h  main.h  util.h
ipcv_assignment_1/training_data/: dart.vec  train.sh
ipcv_assignment_1/training_data/dartcascade/: cascade.xml  stage0.xml
ipcv_assignment_1/training_data/dartcascade/stages/: stage1.xml  stage2.xml
ipcv_assignment_1/training_data/stage0/: cascade.xml
ipcv_assignment_1/training_data/stage1/: cascade.xml
ipcv_assignment_1/training_data/stage2/: cascade.xml  stage1.xml
ipcv_assignment_1/training_data/stage3/: cascade.xml  stage0.xml  stage2.xml  stage3.xml
report/: citations.bib  conference_041818.bbl  conference_041818.blg  conference_041818.tex  table.txt
